tests/fail/unsupported-tag-syntax-2.stderr
error: expected `,`
 --> tests/fail/unsupported-tag-syntax-2.rs:6:22
  |
6 | #[test_tag::tag(tag2 = "foobar")]
  |                      ^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/fail/unsupported-tag-syntax-2.rs:8:21
  |
8 | fn cant_compile() {}
  |                     ^ consider adding a `main` function to `$DIR/tests/fail/unsupported-tag-syntax-2.rs`
